<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sprinkler">

    <fragment
        android:id="@+id/navigation_sprinkler"
        android:name="com.gms.controller.ui.sprinkler.SprinklerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_sprinkler" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.gms.controller.ui.alarm.AlarmFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.gms.controller.ui.urgentMessage.UrgentMessageFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_urgent_message" />
</navigation>