<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <include
        android:id="@+id/lcd_container"
        layout="@layout/lcd_head"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#d6d7d7"
        />

    <LinearLayout
        android:id="@+id/summaryLayout"
        android:layout_width="398dp"
        android:layout_height="350dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        android:background="#eeeeee"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="238dp"
                android:layout_height="5dp"
                android:paddingLeft="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCurrentUser"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:gravity="right|center"
                android:paddingRight="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="238dp"
                android:layout_height="30dp"
                android:paddingLeft="20sp"
                android:text="@string/captured_image"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewWeather"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="right|center"
                android:paddingRight="20sp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageViewCapture"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="5pt"
                android:layout_marginBottom="5pt"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_about" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="238dp"
                android:layout_height="30dp"
                android:paddingLeft="20sp"
                android:text="@string/passcode"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPasscode"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:hint="@string/enter_code"
                android:paddingLeft="1sp"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

        <Button
            android:id="@+id/buttonDismissAlarm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:height="40dp"
            android:background="@color/colorPrimaryButton"
            android:text="@string/alarm_dismissal"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCycle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>